--- a/css/style.css
+++ b/css/style.css
@@ -232,14 +232,14 @@ p {
 .copyright {
     margin-bottom: 1px !important;
     font-size: 11px !important;
-    color: #CBD5E1 !important; /* 您選的高級灰藍 */
+    color: #FFFFFF !important; /* 您選的高級灰藍 */
     letter-spacing: 1.5px !important;
 }
 
 .privacy-link {
     margin-top: 3px !important;
     font-size: 10px !important;
-    color: #CBD5E1 !important; /* #64748B */
+    color: #FFFFFF !important; /* #64748B */
     text-decoration: none !important;
     letter-spacing: 1px;
     opacity: 0.8; /* 稍微半透明，讓它更低調 */
