--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ h1 {
 
 p {
   font-size: 13px !important;
-  color: #6d6d6d !important;
+  color: #D2E9FF !important;
   letter-spacing: 1.5px !important;
   margin-bottom: 35px !important;
   text-align: center;
