--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ body::before {
 h1 {
   font-size: 24px !important;
   font-weight: 600 !important;
-  color: #84C1FF !important; 
+  color: #4B4453 !important; 
   letter-spacing: 3px !important;
   margin-top: 25px !important;
   margin-bottom: 8px !important;
