--- a/css/style.css
+++ b/css/style.css
@@ -286,3 +286,14 @@ p {
     font-weight: 500;
 }
 
+/* 燈箱背景變暗的濃度調得高級一點 */
+.lum-lightbox {
+    background: rgba(0, 0, 0, 0.6) !important;
+    backdrop-filter: blur(5px); /* 背景順便模糊，超美！ */
+}
+
+/* 讓彈出的大圖帶有一點點圓角 */
+.lum-img {
+    border-radius: 15px !important;
+    box-shadow: 0 20px 50px rgba(0,0,0,0.3);
+}
